<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_button_google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imageView_logo">

    </com.google.android.gms.common.SignInButton>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_editText_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/login_button_google"
        app:layout_constraintStart_toStartOf="@+id/login_button_google"
        app:layout_constraintTop_toBottomOf="@+id/login_imageView_line"
        app:startIconContentDescription="email"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button_register"
        app:icon="@drawable/ic_baseline_how_to_reg_24"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="clickButton"
        android:padding="5dp"
        android:text="회원가입"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_editText_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_pw" />

    <Button
        android:id="@+id/login_button_login"
        app:icon="@drawable/ic_baseline_login_24"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="clickButton"
        android:padding="5dp"
        android:text="로그인"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_pw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_pw" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_editText_pw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_id"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_editText_id"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_id"
        app:startIconContentDescription="password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/login_imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_______cock_fit__" />

    <ImageView
        android:id="@+id/login_imageView_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login_editText_id"
        app:layout_constraintStart_toStartOf="@+id/login_editText_id"
        app:layout_constraintTop_toBottomOf="@+id/login_button_google"
        app:srcCompat="@drawable/line_sample" />


</androidx.constraintlayout.widget.ConstraintLayout>