<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/register_icon"
        android:icon="@drawable/ic_baseline_how_to_reg_24"
        android:title="Register"
        app:showAsAction="ifRoom"/>

</menu>